# broker-service/docs/swagger.json
@@ -28,7 +28,7 @@
         },
         "/auth/login": {
             "post": {
-                "description": "Registers a new user with the specified data.",
+                "description": "Logs in a user with the given data.",
                 "consumes": [
                     "application/json"
                 ],
@@ -38,7 +38,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Register a new user",
+                "summary": "Logs a user",
                 "parameters": [
                     {
                         "description": "User data",
@@ -66,9 +66,9 @@
                 }
             }
         },
-        "/auth/registration": {
+        "/auth/register": {
             "post": {
-                "description": "Logs in a user with the given data.",
+                "description": "Registers a new user with the specified data.",
                 "consumes": [
                     "application/json"
                 ],
@@ -78,7 +78,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Logs a user",
+                "summary": "Register a new user",
                 "parameters": [
                     {
                         "description": "User data",
